Move shim into src/main/java; exclude from JDK 28 compile to fix class-file ordering
The JDK 5 shim (AutoValhallaAgent) now lives with the rest of the agent sources
but is excluded from the JDK 28 maven-compiler-plugin run, so AutoValhallaAgent.class
in target/classes is produced only by the JDK 5 javac step (guaranteed v49, no
rage with the JDK 28 output). Shim gained install()/isSupported() entry points;
the agent5 placeholder mirrors the new single-arg signatures so the JDK 5 javac
link succeeds.